--- a/project/NPAs_page.html
+++ b/project/NPAs_page.html
@@ -5,8 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Образовательный ресурс</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="Anna_style.css">
-	<link rel="stylesheet" href="Dasha_style.css">
 	<script src="jquery-3.6.0.min.js"></script>
 	
 </head>
@@ -27,127 +25,93 @@
 					<input class="search" name="s" type="search" autocomplete="off">
 				</form>
 			<ul>
-				<li class="li"><a href="#">Статьи</a></li>
-				<li><a href="#">НПА</a></li>
-				<li><a href="#">Лекции</a></li>
-				<li><a href="#">Файлы</a></li>
+				<li class="li"><a href="articles_page.html">Статьи</a></li>
+				<li><a href="NPAs_page.html">НПА</a></li>
+				<li><a href="lectures_page.html">Лекции</a></li>
+				<li><a href="files_page.html">Файлы</a></li>
 			</ul>
 		</nav>
-
-		<!-- Тут ваш код -->
-		
 		<section>
 			<div class="block block_full">
 				<div class="block-header block-header_full">
 					<h2>Нормативно-правовые акты</h2>
 				</div>
 				<div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Название Органа</p>
-					</div>
+					<a href="Source/NPA/FSTEK_IB_1.pdf" target="_blank">
+						<div class="block-content-header">
+							<h3>Выписка из Требований по безопасности информации</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Требования по безопасности информации, устанавливающие уровни доверия к
+								средствам технической защиты информации и средствам обеспечения
+								безопасности информационных технологий
+								(выписка от 2 июня 2020г.)
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>ФСТЭК</p>
+						</div>
+					</a>
 				</div>
 
 				<div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Название Органа</p>
-					</div>
-				</div><div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Название Органа</p>
-					</div>
-				</div><div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Название Органа</p>
-					</div>
-				</div><div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Название Органа</p>
-					</div>
-				</div><div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Название Органа</p>
-					</div>
+					<a href="Source/NPA/FSTEK_OS_b4.pdf" target="_blank">
+						<div class="block-content-header">
+							<h3>Профиль защиты ОС типа "Б" 4 класса защиты</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Настоящий методический документ ФСТЭК России детализирует и
+								определяет взаимосвязи требований и функций безопасности операционных
+								систем, установленных Требованиями безопасности
+								информации к ОС, утвержденными приказом ФСТЭК России от 19 августа
+								2016 г. № 119.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>ФСТЭК</p>
+						</div>
+					</a>
 				</div>
-
-				
+				<div class="block-content block-content_full">
+					<a href="Source/NPA/FSTEK_OS_b5.pdf" target="_blank">
+						<div class="block-content-header">
+							<h3>Профиль защиты ОС типа "Б" 5 класса защиты</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Настоящий методический документ ФСТЭК России детализирует и
+								определяет взаимосвязи требований и функций безопасности операционных
+								систем, установленных Требованиями безопасности
+								информации к ОС, утвержденными приказом ФСТЭК России от 19 августа
+								2016 г. № 119.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>ФСТЭК</p>
+						</div>
+					</a>
+				</div>
+				<div class="block-content block-content_full">
+					<a href="Source/NPA/FSTEK_OS__A4.pdf" target="_blank">
+						<div class="block-content-header">
+							<h3>Профиль защиты ОС типа "А" 4 класса защиты</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Настоящий методический документ ФСТЭК России детализирует и
+								определяет взаимосвязи требований и функций безопасности операционных
+								систем, установленных Требованиями безопасности
+								информации к ОС, утвержденными приказом ФСТЭК России от 19 августа
+								2016 г. № 119.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>ФСТЭК</p>
+						</div>
+					</a>
+				</div>
 		</section>
 
 		<footer>
@@ -159,5 +123,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="script.js">
+	</script>
 </body>
 </html>
