--- a/project/articles_page.html
+++ b/project/articles_page.html
@@ -5,8 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Образовательный ресурс</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="Anna_style.css">
-	<link rel="stylesheet" href="Dasha_style.css">
 	<script src="jquery-3.6.0.min.js"></script>
 	
 </head>
@@ -27,127 +25,76 @@
 					<input class="search" name="s" type="search" autocomplete="off">
 				</form>
 			<ul>
-				<li class="li"><a href="#">Статьи</a></li>
-				<li><a href="#">НПА</a></li>
-				<li><a href="#">Лекции</a></li>
-				<li><a href="#">Файлы</a></li>
+				<li class="li"><a href="articles_page.html">Статьи</a></li>
+				<li><a href="NPAs_page.html">НПА</a></li>
+				<li><a href="lectures_page.html">Лекции</a></li>
+				<li><a href="files_page.html">Файлы</a></li>
 			</ul>
 		</nav>
-
-		<!-- Тут ваш код -->
-		
+	
 		<section>
 			<div class="block block_full">
 				<div class="block-header block-header_full">
 					<h2>Статьи</h2>
 				</div>
 				<div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Автор: Имя</p>
-					</div>
+					<a href="Source/articles/Андреева Е.А. Управление динамическими системами.pdf" target="_blank">
+						<div class="block-content-header">
+							<h3>Управление динамическими системами</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Отражены современные методы и проблемы математической
+								теории оптимального управления динамическими системами,
+								которые — описываются — функиионально-дифференциальными
+								уравнениями, включая разрывные системы и системы с
+								запаздыванием. Пособие состоит из двух частей и включает как
+								теоретический материал, так и прикладные задачи.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Автор: Андреева Е.А.</p>
+						</div>
+					</a>
 				</div>
 
 				<div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Автор: Имя</p>
-					</div>
-				</div><div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Автор: Имя</p>
-					</div>
-				</div><div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Автор: Имя</p>
-					</div>
-				</div><div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Автор: Имя</p>
-					</div>
-				</div><div class="block-content block-content_full">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Автор: Имя</p>
-					</div>
+					<a href="Source/articles/Семыкина Н.А. Шаповалова И.А. МАТЕМАТИЧЕСКИЕ МОДЕЛИ В ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ.pdf" target="_blank">
+						<div class="block-content-header">
+							<h3>МАТЕМАТИЧЕСКИЕ МОДЕЛИ В ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								В пособии представлены формализованные математические
+								модели прикладных задач из области информационной безопасности.
+								Приведена методика подхода к теоретическому и
+								экспериментальному исследованию. Формулируются задачи, которые
+								предлагается решить самостоятельно.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Авторы: Семыкина Н.А. Шаповалова И.А.</p>
+						</div>
+					</a>
 				</div>
-			</div>
-				
+				<div class="block-content block-content_full">
+					<a href="Source/articles/Семыкина Н.А. Шаповалова И.А. Нейросетевой подход при моделировании DDOS-атак.pdf" target="_blank">
+						<div class="block-content-header">
+							<h3>Нейросетевой подход при моделировании DDOS-атак</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								В работе представлены результаты реализации механизма выявления кибератак в
+								сетевом трафике. В основе метода лежит нейросетевой подход. Рассмотрена
+								архитектура рекуррентной нейронной сети с долгой краткосрочной памятью, так как она
+								лучше всего подходит для анализа информации с учетом предыдущих данных.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Авторы: Семыкина Н.А. Шаповалова И.А. </p>
+						</div>
+					</a>
+				</div>
 		</section>
 
 		<footer>
@@ -159,5 +106,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="script.js">
+	</script>
 </body>
 </html>
