--- a/project/files_page.html
+++ b/project/files_page.html
@@ -5,8 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Образовательный ресурс</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="Anna_style.css">
-	<!-- <link rel="stylesheet" href="Dasha_style.css">-->
 	<script src="jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -28,8 +26,8 @@
 			<ul>
 				<li class="li"><a href="articles_page.html">Статьи</a></li>
 				<li><a href="NPAs_page.html">НПА</a></li>
-				<li><a href="#">Лекции</a></li>
-				<li><a href="#">Файлы</a></li>
+				<li><a href="lectures_page.html">Лекции</a></li>
+				<li><a href="files_page.html">Файлы</a></li>
 			</ul>
 		</nav>
 
@@ -38,113 +36,82 @@
 				<div class="block-header block-header_full">
 					<h2>Хранилище файлов</h2>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Добавил: Ник</p>
-					</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Cluster irises.txt" target="_blank">
+						<div class="block-content-header">
+							<h3>Ирис виргинский</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Статистика с параметрами вида растения 
+								"Ирис виргинский" для анализа.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Добавил: Ник</p>
-					</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/abc-xyz.txt" target="_blank">
+						<div class="block-content-header">
+							<h3>Товары</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Статистика продаж товаров по месяцам для анализа.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Добавил: Ник</p>
-					</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Cluster mushrooms.txt" target="_blank">
+						<div class="block-content-header">
+							<h3>Гроздевые грибы</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Статистика с данными о гроздевых грибах для анализа.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Добавил: Ник</p>
-					</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Houses.xlsx" target="_blank">
+						<div class="block-content-header">
+							<h3>Аренда жилья</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								База с данными об арендуемом жилье: расположение, 
+								количество комнат, площадь, этаж и т.д.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Добавил: Ник</p>
-					</div>
-				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Добавил: Ник</p>
-					</div>
+				<div class="block-content block-content_full">
+					<a href="Source/files/Market basket checks.lgd" target="_blank">
+						<div class="block-content-header">
+							<h3>Проверка рыночной корзины</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Лоджином файл с работой по рыночной корзине.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
 				</div>
 		</section>
 
@@ -157,5 +124,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="script.js">
+	</script>
 </body>
 </html>
