--- a/project/index.html
+++ b/project/index.html
@@ -26,8 +26,8 @@
 			<ul>
 				<li class="li"><a href="articles_page.html">Статьи</a></li>
 				<li><a href="NPAs_page.html">НПА</a></li>
-				<li><a href="#">Лекции</a></li>
-				<li><a href="#">Файлы</a></li>
+				<li><a href="lectures_page.html">Лекции</a></li>
+				<li><a href="files_page.html">Файлы</a></li>
 			</ul>
 		</nav>
 		<section>
@@ -36,45 +36,47 @@
 					<h2>Статьи</h2>
 				</div>
 				<div class="block-content">
-					<div class="block-content-header">
-						<a href="Знакомство с Loginom.mp4" target="_blank">
+					<a href="Source/articles/Андреева Е.А. Управление динамическими системами.pdf" target="_blank">
+						<div class="block-content-header">
+								<h3>
+									Управление динамическими системами
+								</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Отражены современные методы и проблемы математической
+								теории оптимального управления динамическими системами,
+								которые — описываются — функиионально-дифференциальными
+								уравнениями, включая разрывные системы и системы с
+								запаздыванием. Пособие состоит из двух частей и включает как
+								теоретический материал, так и прикладные задачи.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Автор: Андреева Е.А.</p>
+						</div>
+					</a>
+				</div>
+				<div class="block-content">
+					<a href="Source/articles/Семыкина Н.А. Шаповалова И.А. МАТЕМАТИЧЕСКИЕ МОДЕЛИ В ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ.pdf" target="_blank">
+						<div class="block-content-header">
 							<h3>
 								МАТЕМАТИЧЕСКИЕ МОДЕЛИ В ИНФОРМАЦИОННОЙ БЕЗОПАСНОСТИ
 							</h3>
-						</a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							В работе представлены результаты реализации механизма выявления кибератак в
-							сетевом трафике. В основе метода лежит нейросетевой подход. Рассмотрена
-							архитектура рекуррентной нейронной сети с долгой краткосрочной памятью.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Авторы: Семыкина Н.А. Шаповалова И.А. </p>
-					</div>
-				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#">
-							<h3>
-								Профиль защиты операционных систем типа "В" четвертого класса защиты
-							</h3>
-						</a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Автор: Имя</p>
-					</div>
+						</div>
+						<div class="block-content-description">
+							<p>
+								В пособии представлены формализованные математические
+								модели прикладных задач из области информационной безопасности.
+								Приведена методика подхода к теоретическому и
+								экспериментальному исследованию. Формулируются задачи, которые
+								предлагается решить самостоятельно.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Авторы: Семыкина Н.А. Шаповалова И.А.</p>
+						</div>
+					</a>
 				</div>
 			</div>
 		</section>
@@ -84,40 +86,38 @@
 					<h2>Лекции</h2>
 				</div>
 				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Преподаватель: ФИО</p>
-					</div>
+					<a href="Source/lectures/Loginom1.mp4" target="_blank">
+						<div class="block-content-header">
+							<h3>Знакомство с Loginom Часть 1</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Знакомство с программным обеспечением предназначеным
+								для обработки больших данных и анализа. Пример работы
+								со статистикой продажи.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Преподаватель: ???</p>
+						</div>
+					</a>
 				</div>
 				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum файл dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Преподаватель: ФИО</p>
-					</div>
+					<a href="Source/lectures/Loginom2.mp4" target="_blank">
+						<div class="block-content-header">
+							<h3>Знакомство с Loginom Часть 2</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Продолжение знакомства с программным обеспечением предназначеным
+								для обработки больших данных и анализа. Пример работы
+								со статистикой продажи.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Преподаватель: ???</p>
+						</div>
+					</a>
 				</div>
 			</div>
 		</section>
@@ -127,40 +127,35 @@
 					<h2>Файлы</h2>
 				</div>
 				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Добавил: Имя</p>
-					</div>
+					<a href="Source/files/Cluster irises.txt" target="_blank">
+						<div class="block-content-header">
+							<h3>Ирис виргинский</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Статистика с параметрами вида растения 
+								"Ирис виргинский" для анализа.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
 				</div>
 				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Добавил: Имя</p>
-					</div>
+					<a href="Source/files/abc-xyz.txt" target="_blank">
+						<div class="block-content-header">
+							<h3>Товары</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Статистика продаж товаров по месяцам для анализа.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Добавила: Царькова Е.Г.</p>
+						</div>
+					</a>
 				</div>
 			</div>
 		</section>
@@ -173,54 +168,7 @@
 			</div>
 		</footer>
 	</div>
-	<script>
-		(function(){
-			var footerHeight = $('footer').css('height').replace('px', '');
-			$(window).scroll(function () {
-				var bottomOffset = $(document).height() - $(window).scrollTop() - $(window).height();
-				if (bottomOffset < footerHeight) {
-					$("nav").css('bottom', footerHeight - bottomOffset);
-				} else {
-					$("nav").css('bottom', 0);
-				}
-			});
-		})();
-		
-		$(document).ready(function() {
-			$('input').keydown(function(e) {
-				if(e.code === 'Enter') {
-					$('.block-content').html(function(index, oldValue) {
-						return oldValue.replace(new RegExp('<span style="color: yellow; font-weight: bold">', 'g'), '');
-					});
-					$('.block-content').html(function(index, oldValue) {
-						return oldValue.replace(new RegExp('</span>', 'g'), '');
-					});
-
-					var val = $(this).val();
-					if (val === '') return;
-					var isScroll = false;
-					let count = 0;
-					//alert($('.block-content').html().replace(val, '<span style="color: red">' + val + '</span>'))
-					$('.block-content').html(function(index, oldValue) {
-						var indexOf = oldValue.indexOf(val)
-						if(indexOf != -1){
-							count++;
-						}
-						if(!isScroll & indexOf != -1){
-							let posY = $('.block-content:eq(' + index + ')').offset().top;
-							$('html,body').scrollTop(posY - 300);
-							isScroll = true;
-						}
-
-						return oldValue.replace(new RegExp(val, 'g'),
-						 '<span style="color: yellow; font-weight: bold">' + val + '</span>');
-					});
-					if(count == 0){
-						alert('Ничего не найдено. Попробуйте осуществить поиск в других разделах.')
-					}
-				};
-			});
-		});
+	<script src="script.js">
 	</script>
 </body>
 </html>
