--- a/project/lectures_page.html
+++ b/project/lectures_page.html
@@ -5,8 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Образовательный ресурс</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="Anna_style.css">
-	<!-- <link rel="stylesheet" href="Dasha_style.css">-->
 	<script src="jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -28,8 +26,8 @@
 			<ul>
 				<li class="li"><a href="articles_page.html">Статьи</a></li>
 				<li><a href="NPAs_page.html">НПА</a></li>
-				<li><a href="#">Лекции</a></li>
-				<li><a href="#">Файлы</a></li>
+				<li><a href="lectures_page.html">Лекции</a></li>
+				<li><a href="files_page.html">Файлы</a></li>
 			</ul>
 		</nav>
 
@@ -38,115 +36,58 @@
 				<div class="block-header block-header_full">
 					<h2>Лекции</h2>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Преподаватель: ФИО</p>
-					</div>
+				<div class="block-content block-content_full">
+					<a href="Source/lectures/Loginom1.mp4" target="_blank">
+						<div class="block-content-header">
+							<h3>Знакомство с Loginom Часть 1</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Знакомство с программным обеспечением предназначеным
+								для обработки больших данных и анализа. Пример работы
+								со статистикой продажи.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Преподаватель: ???</p>
+						</div>
+					</a>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Преподаватель: ФИО</p>
-					</div>
+				<div class="block-content block-content_full">
+					<a href="Source/lectures/Loginom2.mp4" target="_blank">
+						<div class="block-content-header">
+							<h3>Знакомство с Loginom Часть 2</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Продолжение знакомства с программным обеспечением предназначеным
+								для обработки больших данных и анализа. Пример работы
+								со статистикой продажи.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Преподаватель: ???</p>
+						</div>
+					</a>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Преподаватель: ФИО</p>
-					</div>
+				<div class="block-content block-content_full">
+					<a href="Source/lectures/Loginom3.mp4" target="_blank">
+						<div class="block-content-header">
+							<h3>Знакомство с Loginom Часть 3</h3>
+						</div>
+						<div class="block-content-description">
+							<p>
+								Завершение знакомства с программным обеспечением предназначеным
+								для обработки больших данных и анализа. Пример работы
+								со статистикой продажи.
+							</p>
+						</div>
+						<div class="block-content-author">
+								<p>Преподаватель: ???</p>
+						</div>
+					</a>
 				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Преподаватель: ФИО</p>
-					</div>
-				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Преподаватель: ФИО</p>
-					</div>
-				</div>
-				<div class="block-content">
-					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
-					</div>
-					<div class="block-content-description">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							Ut enim ad minim veniam, 
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-							eu fugiat nulla pariatur.
-						</p>
-					</div>
-					<div class="block-content-author">
-							<p>Преподаватель: ФИО</p>
-					</div>
-				</div>
-		</section>
+			</section>
 
 		<footer>
 			<div class="footer">
@@ -157,5 +98,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="script.js">
+	</script>
 </body>
 </html>
